# VoiceRecorder

./: .gitignore  PLAN.md  README.md  checklist.md  context-notes.md
.portal/: manifest.yaml
backend/: pyproject.toml
backend/app/: __init__.py  audio.py  config.py  jobs.py  main.py  models.py  script_parser.py  store.py  synth.py  textnorm.py  timeline.py
backend/app/tts/: __init__.py  base.py  chatterbox_engine.py  cosy_engine.py  melo_engine.py  registry.py
backend/tests/: conftest.py  test_api.py  test_script_parser.py  test_textnorm.py  test_timeline.py
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  main.tsx  types.ts
frontend/src/components/: Editor.tsx  EngineStatus.tsx  SceneCard.tsx  ScriptComposer.tsx  SettingsDrawer.tsx
scripts/: cosy_worker.py  fetch-models.sh  instruct_test.py  measure_pitch.py  melo_worker.py  models-from-drive.sh  models-to-drive.sh  serve.sh  setup-backend.sh  setup-cosy.sh  setup-melo.sh  smoke_chatterbox.py  spk_test.py  tune_experiment.py
